kubernetes/argocd/platform/a2w-sre/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: a2w-sre
  labels:
    app: a2w-sre
