kubernetes/argocd/platform/a2w-sre/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: a2w-sre
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
