kubernetes/argocd/platform/a2w-sre/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: a2w-sre
  name: a2w-sre-ingress
  namespace: a2w-sre
spec:
  rules:
    - host: sre.kubeden.io
      http:
        paths:
          - backend:
              service:
                name: dashboard
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sre.kubeden.io
      secretName: a2w-sre-tls
